# Control-single-drone

./: README.md  gains
control_drone/: CMakeLists.txt  package.xml
control_drone/include/: controlSM.h  dynamic_model.h  link_gazebo.h  link_gazebo_perturbation.h  outputs.h  trajectory.h
control_drone/launch/: gazeboPID.launch  gazeboPIDPerturbation.launch  gazeboSM.launch  gazeboSMPerturbation.launch  realPID.launch  realSM.launch
control_drone/src/: controlSM.cpp  link_gazebo.cpp  link_gazebo_perturbation.cpp  outputs.cpp
control_drone/urdf/: drone.urdf
controleDrone/: CMakeLists.txt  package.xml
controleDrone/include/: control.h  controlPID.h  controlSM.h  controlsm.h  dynamic_model.h  ekf_imu_mocap_transfert.h  inputs.h  link_gazebo.h  outputs.h  trajectory.h
controleDrone/launch/: 1.launch  gazebo.launch  gazeboPID.launch  gazeboSM.launch  realPID.launch  realSM.launch  reel.launch  test.launch  virtuelPID.launch  virtuelSM.launch  virtuelsm.launch
controleDrone/src/: control.cpp  controlPID.cpp  controlSM.cpp  controlsm.cpp  desiredposepub.cpp  dynamic_model.cpp  ekf_imu_mocap_transfert.cpp  inputs.cpp  link_gazebo.cpp  outputs.cpp  trajectory.cpp
controleDrone/urdf/: drone.urdf
gazebo/: 2.launch  force.cpp  force.h  gazebo.launch
gazebo/urdf/: drone.urdf
