<?xml version="1.0"?>
<package format="2">

  <name>control_drone</name>
  <version>1.0.0</version>
  <description>The control_drone package</description>
  
  <maintainer email="laurent.frering@gmail.com">laurent</maintainer>
  <maintainer email="alexandre.anchyse@gmail.com">alexandre</maintainer>
  <maintainer email="totomamachaumont@gmail.com">thomas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>qualisys</build_depend>
  <build_depend>mavros</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>qualisys</build_export_depend>
  <build_export_depend>mavros</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>qualisys</exec_depend>
  <exec_depend>mavros</exec_depend>

</package>
