<?xml version="1.0"?>
<package format="2">
  <name>controleDrone</name>
  <version>0.0.0</version>
  <description>The controleDrone package</description>
  
  <maintainer email="laurent.frering@gmail.com">laurent</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>eigen</exec_depend>


</package>
